--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -5,30 +5,37 @@
   },
   "header": {
     "balance": "Баланс",
+    "balanceTitle": "Показать баланс",
     "history": "История",
     "newResearch": "Новое исследование"
   },
   "balance": {
-    "title": "Ваш баланс",
+    "title": "Баланс",
     "credits": "кредитов",
     "refresh": "Обновить",
     "topup": "Пополнить",
     "loading": "Загрузка...",
-    "error": "Ошибка загрузки баланса"
+    "error": "Ошибка загрузки",
+    "updatedAt": "Обновлено"
   },
   "research": {
     "queryLabel": "Тема исследования",
-    "queryPlaceholder": "Введите вопрос или тему для исследования...",
+    "queryPlaceholder": "Опишите тему или вопрос максимально подробно: укажите контекст, ограничения, желаемую глубину анализа. Чем конкретнее запрос — тем качественнее результат.",
+    "queryHint": "Например: «Сравните эффективность солнечных и ветровых электростанций в условиях Северной Европы за 2020-2025 гг.»",
     "options": {
       "mode": "Режим",
+      "modeHelp": "Режим влияет на глубину и скорость исследования",
       "modeStandard": "Стандартный",
       "modeDeep": "Глубокий",
       "modeQuick": "Быстрый",
+      "modeHint": "Стандартный — оптимальный баланс. Глубокий — максимум источников и проверок. Быстрый — краткий ответ за минуту.",
       "type": "Тип",
+      "typeHelp": "Тип определяет формат и структуру отчёта",
       "typeFactsAndAnalysis": "Факты и анализ",
       "typeComparison": "Сравнение",
       "typeTrends": "Тренды",
       "typeHowTo": "Инструкция",
+      "typeHint": "Факты — обзор с выводами. Сравнение — таблица «за/против». Тренды — динамика и прогнозы. Инструкция — пошаговое руководство.",
       "language": "Язык",
       "languageRu": "Русский",
       "languageEn": "English"
@@ -87,7 +94,8 @@
     "network": "Ошибка сети. Проверьте подключение.",
     "insufficientBalance": "Недостаточно средств на балансе",
     "validationError": "Ошибка валидации",
-    "serverError": "Ошибка сервера"
+    "serverError": "Ошибка сервера",
+    "topupUnavailable": "Ссылка для пополнения недоступна. Обратитесь в поддержку."
   },
   "common": {
     "loading": "Загрузка...",
