feat: добавлен identity resolution через CORE API
- Добавлен метод resolveIdentity в core.ts
- Создан endpoint POST /api/identity/init
- Frontend вызывает identity/init для получения правильного user_id
- Исправлена проблема с разными user_id между m001 и m004

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -95,7 +95,8 @@
     "insufficientBalance": "Insufficient balance",
     "validationError": "Validation error",
     "serverError": "Server error",
-    "topupUnavailable": "Top-up link unavailable. Contact support."
+    "topupUnavailable": "Top-up link unavailable. Contact support.",
+    "identityFailed": "Identity error. Please reload the page."
   },
   "common": {
     "loading": "Loading...",
