--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -95,7 +95,8 @@
     "insufficientBalance": "Недостаточно средств на балансе",
     "validationError": "Ошибка валидации",
     "serverError": "Ошибка сервера",
-    "topupUnavailable": "Ссылка для пополнения недоступна. Обратитесь в поддержку."
+    "topupUnavailable": "Ссылка для пополнения недоступна. Обратитесь в поддержку.",
+    "identityFailed": "Ошибка идентификации. Попробуйте перезагрузить страницу."
   },
   "common": {
     "loading": "Загрузка...",
