fix(frontend): improve UX - history buttons, download fix, quality display
- history.html: replace navigation links with download/view buttons (fetch+blob)
- app.js: add loadExistingResearch(), downloadExport(), getAuthorityLabel()
- app.js: fix showResult() quality badge with tooltips, source authority labels
- index.html: replace <a download> with <button>, add quality-explanation, sources-hint
- ru.json: add user-friendly translations for quality, authority, verification
- styles.css: add styles for new history buttons, quality explanation, sources hint
- output.ts: replace technical partial notice text with user-friendly Russian/English
- output.ts: update formatSourcesSection with text authority labels

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -67,21 +67,41 @@
   },
   "result": {
     "title": "Результат исследования",
-    "quality": "Качество",
-    "qualityHigh": "Высокое",
-    "qualityMedium": "Среднее",
-    "qualityLow": "Низкое",
-    "sources": "Источники",
+    "quality": "Достоверность",
+    "qualityHigh": "Высокая достоверность",
+    "qualityMedium": "Средняя достоверность",
+    "qualityLow": "Базовая достоверность",
+    "qualityHighHint": "Большинство фактов подтверждены авторитетными источниками. Результатам можно доверять.",
+    "qualityMediumHint": "Часть фактов подтверждена, часть требует дополнительной проверки. Используйте как отправную точку для дальнейшего изучения.",
+    "qualityLowHint": "Результаты дают общее представление по теме, но требуют дополнительной проверки из независимых источников.",
+    "sources": "Использованные источники",
+    "sourcesHint": "Источники ранжированы по надёжности. Чем выше рейтинг — тем авторитетнее источник.",
     "verifiedFacts": "Проверенные факты",
-    "export": "Экспорт",
-    "exportMarkdown": "Markdown",
-    "exportJson": "JSON",
-    "exportPdf": "PDF"
+    "export": "Скачать отчёт",
+    "exportMarkdown": "Скачать Markdown",
+    "exportJson": "Скачать JSON",
+    "exportPdf": "PDF",
+    "authorityHigh": "Авторитетный",
+    "authorityMedium": "Надёжный",
+    "authorityLow": "Непроверенный",
+    "partialTitle": "Результат с ограничениями",
+    "partialExplainQuestions": "Исследовано {covered} из {planned} запланированных аспектов темы.",
+    "partialExplainVerification": "Проверка фактов: {level}",
+    "verificationFull": "полная — все факты перепроверены",
+    "verificationSimplified": "базовая — факты проверены по одному источнику",
+    "verificationSkipped": "не проводилась — результаты основаны только на поиске",
+    "partialExplainBudget": "Исследование было завершено досрочно из-за ограничений ресурсов.",
+    "partialTip": "Для более глубокого анализа попробуйте режим «Глубокий» или «Стандартный»."
   },
   "history": {
     "title": "История исследований",
-    "empty": "История пуста",
-    "loadMore": "Загрузить ещё"
+    "empty": "Вы ещё не проводили исследований",
+    "loadMore": "Загрузить ещё",
+    "downloadMd": "Скачать .md",
+    "downloadJson": "Скачать .json",
+    "viewResult": "Открыть",
+    "qualityLabel": "Достоверность",
+    "noResult": "Результат недоступен"
   },
   "status": {
     "completed": "Завершено",
