--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -70,9 +70,23 @@
     "quality": "Quality",
     "qualityHigh": "High",
     "qualityMedium": "Medium",
-    "qualityLow": "Low",
+    "qualityLow": "Basic",
+    "qualityHighHint": "High reliability: information confirmed by multiple authoritative sources",
+    "qualityMediumHint": "Medium reliability: key facts verified, but additional verification recommended",
+    "qualityLowHint": "Basic level: information collected, but requires independent verification before use",
     "sources": "Sources",
+    "sourcesHint": "List of sources used with their authority ratings",
+    "authorityHigh": "High source authority (official sites, scientific publications)",
+    "authorityMedium": "Medium source authority (trusted media, industry portals)",
+    "authorityLow": "Basic source authority (requires additional verification)",
     "verifiedFacts": "Verified facts",
+    "partialResult": "Partial result",
+    "partialResultHint": "Research completed, but some aspects may not have been verified",
+    "researchProgress": "questions researched",
+    "verificationLevel": "Verification level",
+    "verificationSimplified": "Simplified verification",
+    "verificationStandard": "Standard verification",
+    "verificationDeep": "Deep verification",
     "export": "Export",
     "exportMarkdown": "Markdown",
     "exportJson": "JSON",
