--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -67,41 +67,35 @@
   },
   "result": {
     "title": "Результат исследования",
-    "quality": "Достоверность",
-    "qualityHigh": "Высокая достоверность",
-    "qualityMedium": "Средняя достоверность",
-    "qualityLow": "Базовая достоверность",
-    "qualityHighHint": "Большинство фактов подтверждены авторитетными источниками. Результатам можно доверять.",
-    "qualityMediumHint": "Часть фактов подтверждена, часть требует дополнительной проверки. Используйте как отправную точку для дальнейшего изучения.",
-    "qualityLowHint": "Результаты дают общее представление по теме, но требуют дополнительной проверки из независимых источников.",
-    "sources": "Использованные источники",
-    "sourcesHint": "Источники ранжированы по надёжности. Чем выше рейтинг — тем авторитетнее источник.",
+    "quality": "Качество",
+    "qualityHigh": "Высокое",
+    "qualityMedium": "Среднее",
+    "qualityLow": "Базовое",
+    "qualityHighHint": "Высокая достоверность: информация подтверждена несколькими авторитетными источниками",
+    "qualityMediumHint": "Средняя достоверность: основные факты проверены, но рекомендуется дополнительная верификация",
+    "qualityLowHint": "Базовый уровень: информация собрана, но требует самостоятельной проверки перед использованием",
+    "sources": "Источники",
+    "sourcesHint": "Список использованных источников с оценкой их авторитетности",
+    "authorityHigh": "Высокий авторитет источника (официальные сайты, научные издания)",
+    "authorityMedium": "Средний авторитет источника (проверенные СМИ, отраслевые порталы)",
+    "authorityLow": "Базовый авторитет источника (требует дополнительной проверки)",
     "verifiedFacts": "Проверенные факты",
-    "export": "Скачать отчёт",
-    "exportMarkdown": "Скачать Markdown",
-    "exportJson": "Скачать JSON",
-    "exportPdf": "PDF",
-    "authorityHigh": "Авторитетный",
-    "authorityMedium": "Надёжный",
-    "authorityLow": "Непроверенный",
-    "partialTitle": "Результат с ограничениями",
-    "partialExplainQuestions": "Исследовано {covered} из {planned} запланированных аспектов темы.",
-    "partialExplainVerification": "Проверка фактов: {level}",
-    "verificationFull": "полная — все факты перепроверены",
-    "verificationSimplified": "базовая — факты проверены по одному источнику",
-    "verificationSkipped": "не проводилась — результаты основаны только на поиске",
-    "partialExplainBudget": "Исследование было завершено досрочно из-за ограничений ресурсов.",
-    "partialTip": "Для более глубокого анализа попробуйте режим «Глубокий» или «Стандартный»."
+    "partialResult": "Частичный результат",
+    "partialResultHint": "Исследование выполнено, но некоторые аспекты могли остаться непроверенными",
+    "researchProgress": "исследовано вопросов",
+    "verificationLevel": "Уровень проверки",
+    "verificationSimplified": "Упрощённая проверка",
+    "verificationStandard": "Стандартная проверка",
+    "verificationDeep": "Глубокая проверка",
+    "export": "Экспорт",
+    "exportMarkdown": "Markdown",
+    "exportJson": "JSON",
+    "exportPdf": "PDF"
   },
   "history": {
     "title": "История исследований",
-    "empty": "Вы ещё не проводили исследований",
-    "loadMore": "Загрузить ещё",
-    "downloadMd": "Скачать .md",
-    "downloadJson": "Скачать .json",
-    "viewResult": "Открыть",
-    "qualityLabel": "Достоверность",
-    "noResult": "Результат недоступен"
+    "empty": "История пуста",
+    "loadMore": "Загрузить ещё"
   },
   "status": {
     "completed": "Завершено",
