--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -45,6 +45,7 @@
   },
   "progress": {
     "preparing": "Подготовка...",
+    "resuming": "Восстановление прогресса... Исследование продолжается на сервере.",
     "triage": "Анализ запроса",
     "clarification": "Уточнение",
     "planning": "Планирование",
