feat: v2.5.0 — Golden Set MVP, Quality Gate, Stats Collector, SourceRegistry, Pre-Triage, Adaptive Verification
Major features:
- Golden Set MVP (promptfoo): 5 smoke tests with 8 assertions each
- Quality Gate (Phase 5.5): faithfulness check via GPT-4.1-mini
- Stats Collector: JSONL metrics with goldenSet flag
- SourceRegistry: dedup, URL validation, source masking
- Pre-triage heuristics with floor mode
- Adaptive verification with budget-aware elevation
- Topic tagging with thematic sections in reports
- Grade system A/B/C/F with configurable thresholds
- New compositeScore formula
- Warnings system (SUGGEST_DEEPER_MODE, INSUFFICIENT_DATA, QUALITY_GATE_FAILED)
- Grade tooltip and warning blocks in frontend
- 37 unit tests (metrics + preTriage)
- CI workflow for golden-set-smoke
- .gitignore: exclude data/ from tracking

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -59,7 +59,8 @@
     "planning": "Plan",
     "research": "Search",
     "verification": "Verify",
-    "output": "Report"
+    "output": "Report",
+    "qualityCheck": "QA Check"
   },
   "clarification": {
     "title": "Clarify your request",
@@ -91,7 +92,22 @@
     "export": "Export",
     "exportMarkdown": "Markdown",
     "exportJson": "JSON",
-    "exportPdf": "PDF"
+    "exportPdf": "PDF",
+    "grade": "Grade",
+    "gradeA": "A — Excellent",
+    "gradeB": "B — Good",
+    "gradeC": "C — Satisfactory",
+    "gradeF": "F — Low quality",
+    "gradeAHint": "High reliability: most facts verified with reliable sources",
+    "gradeBHint": "Good quality: key facts verified, some details need clarification",
+    "gradeCHint": "Satisfactory: some facts unconfirmed, additional verification recommended",
+    "gradeFHint": "Low quality: most facts unconfirmed, use with caution",
+    "metricsVerification": "Verification",
+    "metricsCitation": "Citation",
+    "metricsAuthority": "Authority",
+    "metricsOmission": "Facts omitted",
+    "metricsSources": "Sources",
+    "metricsNumerical": "Numerical facts"
   },
   "history": {
     "title": "Research history",
@@ -112,6 +128,18 @@
     "serverError": "Server error",
     "topupUnavailable": "Top-up link unavailable. Contact support.",
     "identityFailed": "Identity error. Please reload the page."
+  },
+  "warnings": {
+    "quality_gate_warning": "ℹ️ Quality check found statements not fully supported by sources. Grade downgraded.",
+    "grade_f_message": "Insufficient verified data. Results are provided for reference only. We recommend using a deeper mode.",
+    "suggest_deeper_standard": "Some facts are unverified. Consider repeating the research in Standard mode for better accuracy.",
+    "suggest_deeper_deep": "Some facts are unverified. Consider repeating the research in Deep mode for maximum verification."
+  },
+  "gradeTooltips": {
+    "A": "High reliability. Most facts are verified by sources.",
+    "B": "Good reliability. Key facts are verified, minor gaps exist.",
+    "C": "Limited reliability. Some facts are unverified. We recommend double-checking.",
+    "F": "Insufficient verified data. Results are provided for reference only."
   },
   "common": {
     "loading": "Loading...",
