--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -59,7 +59,8 @@
     "planning": "План",
     "research": "Поиск",
     "verification": "Проверка",
-    "output": "Отчёт"
+    "output": "Отчёт",
+    "qualityCheck": "Контроль"
   },
   "clarification": {
     "title": "Уточните ваш запрос",
@@ -91,7 +92,22 @@
     "export": "Экспорт",
     "exportMarkdown": "Markdown",
     "exportJson": "JSON",
-    "exportPdf": "PDF"
+    "exportPdf": "PDF",
+    "grade": "Оценка",
+    "gradeA": "A — Отлично",
+    "gradeB": "B — Хорошо",
+    "gradeC": "C — Удовлетворительно",
+    "gradeF": "F — Низкое качество",
+    "gradeAHint": "Высокая достоверность: большинство фактов верифицированы с надёжными источниками",
+    "gradeBHint": "Хорошее качество: основные факты проверены, ряд деталей требуют уточнения",
+    "gradeCHint": "Удовлетворительное: часть фактов не подтверждена, рекомендуется дополнительная проверка",
+    "gradeFHint": "Низкое качество: большинство фактов не подтверждены, используйте с осторожностью",
+    "metricsVerification": "Верификация",
+    "metricsCitation": "Цитирование",
+    "metricsAuthority": "Авторитетность",
+    "metricsOmission": "Пропущено фактов",
+    "metricsSources": "Источников",
+    "metricsNumerical": "Числовых фактов"
   },
   "history": {
     "title": "История исследований",
@@ -112,6 +128,18 @@
     "serverError": "Ошибка сервера",
     "topupUnavailable": "Ссылка для пополнения недоступна. Обратитесь в поддержку.",
     "identityFailed": "Ошибка идентификации. Попробуйте перезагрузить страницу."
+  },
+  "warnings": {
+    "quality_gate_warning": "ℹ️ Проверка качества обнаружила утверждения, не полностью подтверждённые источниками. Грейд понижен.",
+    "grade_f_message": "Недостаточно подтверждённых данных. Результаты приведены для ознакомления. Рекомендуем использовать режим с большей глубиной.",
+    "suggest_deeper_standard": "Часть фактов не подтверждена. Рекомендуем повторить исследование в режиме «Стандартный» для большей точности.",
+    "suggest_deeper_deep": "Часть фактов не подтверждена. Рекомендуем повторить исследование в режиме «Глубокий» для максимальной проверки."
+  },
+  "gradeTooltips": {
+    "A": "Высокая надёжность. Большинство фактов подтверждены источниками.",
+    "B": "Хорошая надёжность. Основные факты подтверждены, есть незначительные пробелы.",
+    "C": "Ограниченная надёжность. Часть фактов не подтверждена. Рекомендуем перепроверить.",
+    "F": "Недостаточно подтверждённых данных. Результаты приведены для ознакомления."
   },
   "common": {
     "loading": "Загрузка...",
